# zunder_zapfe

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
config/: web.env.example
deploy/kiosk/: zunder-zapfe-kiosk
deploy/nginx/: zunder-zapfe-admin.conf
deploy/polkit/: zunder-zapfe-networkmanager.rules.in
deploy/systemd/: zunder-zapfe-web.service.in
docs/: README.md  commit-konvention.md  milestones.md  organization.md  project-status.md  versioning.md
docs/architecture/: admin-webui.md  backend-core-integration.md  hardware-interface.md  kiosk-webui.md  persistence.md  smartphone-admin-webui.md  superadmin.md  tap-state-machine.md
docs/decisions/: 0001-gpl-3-or-later.md
docs/interfaces/: README.md  configuration.md  hardware.md  http-api.md  openapi.json  persistence.md
docs/operations/: acr122u-nfc.md  admin-wifi.md  alpha-integration-test.md  database-browser.md  debug-without-flow-hardware.md  raspberry-pi-kiosk.md  superadmin-card.md
migrations/: env.py
migrations/versions/: 5d7b3a90e214_add_required_password_change.py  665c808f8308_create_initial_persistence_schema.py  830d216e8ba1_add_manual_booking_kind.py  a91f5e7c2d10_add_user_profile_fields.py  c4e9f72a1b06_add_web_admin_sessions.py  d75a2190b4ce_add_user_soft_delete.py  e18c4f45a501_add_booking_login_session.py  f6b942d7183c_add_superadmin_actor_context.py
requirements/: README.md  anforderungskatalog.txt
requirements/changes/: CR-001-manual-push-to-fill.md  CR-002-kiosk-layout-and-timeout.md  CR-002-smartphone-administration.md  CR-003-externer-superadmin.md  README.md
scripts/: deploy-update.sh  export_openapi.py  install-admin-wifi.sh  install-pi.sh  pi-verify.sh  wifi-mode.sh
src/zunder_zapfe/: __init__.py  admin_password.py  api_models.py  build_info.py  configuration.py  demo.py  main.py  nfc.py  nfc_identity.py  smoke_test.py  superadmin_card.py
src/zunder_zapfe/backend/: __init__.py  admin_service.py  superadmin_identity.py  superadmin_service.py  tap_controller.py  tap_service.py  web_auth_service.py  wifi_mode_service.py
src/zunder_zapfe/hardware/: __init__.py  interfaces.py  layer.py  models.py  simulators.py
src/zunder_zapfe/hardware/adapters/: __init__.py  acr122u.py
src/zunder_zapfe/persistence/: __init__.py  database.py  models.py  repository.py
src/zunder_zapfe/web/: admin-app.js  admin-styles.css  admin.html  app.js  index.html  styles.css  system.css  system.html  system.js
tests/: test_admin_api.py  test_admin_management_api.py  test_admin_wifi.py  test_configuration.py  test_documentation.py  test_hardware_simulators.py  test_health.py  test_kiosk_ui.py  test_persistence.py  test_smartphone_admin_ui.py  test_superadmin_identity.py  test_tap_controller.py  test_tap_service.py  test_web_admin_auth.py  test_wifi_mode.py
