[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "zunder-zapfe"
version = "0.1.0"
description = "Offline web application for the Zunder Zapfe tap system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
zunder-zapfe = "zunder_zapfe.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zunder_zapfe = ["web/*.html", "web/*.css"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
