[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "zunder-zapfe"
version = "0.1.0"
description = "Offline web application for the Zunder Zapfe tap system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.18,<1.19",
  "fastapi>=0.115,<1",
  "pyscard>=2.2,<3",
  "SQLAlchemy>=2.0,<2.1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
debug = [
  # sqlite-web 0.7.2 is not compatible with Peewee 4 yet.
  "peewee>=3,<4",
  "sqlite-web>=0.7,<0.8",
]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
zunder-zapfe = "zunder_zapfe.main:run"
zunder-zapfe-seed-demo = "zunder_zapfe.demo:run"
zunder-zapfe-smoke-test = "zunder_zapfe.smoke_test:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zunder_zapfe = ["web/*.html", "web/*.css"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
